# shacklog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.bat
.github/workflows/: release.yml
data/: cty.qrc
installer/: shacklog.iss
src/: AdifReader.cpp  AdifReader.h  AetherSettingsReader.cpp  AetherSettingsReader.h  AprsActivityDialog.cpp  AprsActivityDialog.h  AprsDecode.cpp  AprsDecode.h  AprsKissClient.cpp  AprsKissClient.h  AprsStationModel.cpp  AprsStationModel.h  AwardsDialog.cpp  AwardsDialog.h  CallsignLookup.cpp  CallsignLookup.h  CtyDat.cpp  CtyDat.h  DxClusterClient.cpp  DxClusterClient.h  EditDialog.cpp  EditDialog.h  LogbookModel.cpp  LogbookModel.h  MainWindow.cpp  MainWindow.h  PotaClient.cpp  PotaClient.h  Qso.h  SectionMapDialog.cpp  SectionMapDialog.h  SettingsDialog.cpp  SettingsDialog.h  SpotData.h  SpotIndex.cpp  SpotIndex.h  TciClient.cpp  TciClient.h  main.cpp  shacklog.rc
src/server/: HttpServer.cpp  HttpServer.h  N3fjpClient.cpp  N3fjpClient.h  N3fjpServer.cpp  N3fjpServer.h  WsjtxAdifReceiver.cpp  WsjtxAdifReceiver.h  main.cpp
tests/: aprs_decode_test.cpp
